# jade

./: Cargo.toml  Dockerfile  README.markdown  docker-compose.yml
.sqlx/: query-0f249ebcc82024410bc9a2ca090597340183290d82e1dca372ed97dc64f4f63c.json  query-26e7e05427bc7dabcd7815d27764fda2baf4cfe60a2d2d6ee2a1f773dccbbce2.json  query-59c0dfe291bcd9d089d53e547c63b9b02ada44452fae6993d09e3b05c6591b37.json  query-66ae3ea41040243690c633db78220e83fc8cf4d3a1b99fb9ca0c500b9f6a0f1d.json  query-7815b38a0704f3d7fd569613c19c35f5e0534040ec8757921ff1cd7a95f577d2.json  query-808e9ab6015fa23501295b5c0666073aa0c07d9e5d4dff632c7cac9b012c9ca5.json  query-8b477f42cdfcf9c5eeacc757503ef22418fb30516b77a9ecb83fe3937b247724.json  query-8e5036af858c5443de0d650ad89473f3688bde779a6b6f9a00145103fc70714b.json  query-ad446a8f0ffb295432e578cafc4a0cf78a0d3c8fec3f7c85428e55cf135ad0ba.json  query-e2fcf1fca8e895bff8e5891abc72de3b02b4f37cb14bbae9e01279ec47600b90.json  query-e7f4ec9fe4f700adba188a3a585558cd94d81eea9a3c6b5db3a257fe151097bf.json  query-fe3bb058ebe4dde463fc18957243b605c9ed91423baf68c85cf3f3b48af31a60.json
documentation/: api.markdown  getting-started.markdown
migrations/: 20241220213138_init.up.sql
src/: lib.rs  main.rs
src/modules/: api.rs  cli.rs  err.rs  mod.rs  runner.rs  rw.rs  units.rs  utils.rs
starter/: starter.sh  vars.sh
